MDEV-29802 #sql-backup tables are visible upon CREATE OR REPLACE 	   and get stuck in S3 storage

Now when detecting possibility of atomic replace we check
db_type->flags of existing table. Before that we checked only db_type
of new table.