sql/sql_table.cc
@@ -5199,7 +5199,8 @@ bool mysql_create_table(THD *thd, TABLE_LIST *create_table,
   bool is_trans= FALSE;
   int result;
   TABLE_LIST *orig_table= create_table;
-  bool atomic_replace= create_info->is_atomic_replace();
+  bool atomic_replace= create_info->is_atomic_replace(thd, &create_table->db,
+                                                      &create_table->table_name);
   DBUG_ENTER("mysql_create_table");
 
   DBUG_ASSERT(create_info->default_table_charset);
@@ -5747,7 +5748,8 @@ bool mysql_create_like_table(THD* thd, TABLE_LIST* table,
   local_create_info.row_type= src_table->table->s->row_type;
   local_create_info.alter_info= &local_alter_info;
   local_create_info.options= create_info->options;
-  atomic_replace= local_create_info.is_atomic_replace();
+  atomic_replace= local_create_info.is_atomic_replace(thd, &table->db,
+                                                      &table->table_name);
 
   /*
     This statement:
